--- a/meme project/index.html
+++ b/meme project/index.html
@@ -9,12 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville&display=swap" rel="stylesheet">
   <style>
     html{background-color: black;}
+    body{position: relative;}
     div{
         text-align: center;
         color: white;
         position: absolute;
-        top: 50%;
-        left: 50%;
+        top: -50%;
+        left: -50%;
         transform: translate(-50%, -50%);
       }
     img{border: 5px solid white;}
